ipad header alignment issue

--- a/css/hpit.css
+++ b/css/hpit.css
@@ -2433,6 +2433,7 @@ img {
 	}
 	.navbar-default .navbar-nav > li > a {
 		white-space: nowrap;
+		line-height: 26px;
 	}
 	.container > .navbar-header {
 		border-bottom: none;
